# dot-iptables

./: .gitignore  MANIFEST.in  README.md  dot-iptables.py  index.html  pyproject.toml  rules.html  setup.cfg  setup.py  table.dot
dotiptables/: __main__.py  dotiptables.py
dotiptables/templates/: index.html  rules.html
