[metadata]
name = dotiptables
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com
url = https://github.com/larsks/dot-iptables
description = reads the output of iptables-save and then generates a dot graph showing the relationship between chains
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = dotiptables
install_requires = jinja2;

[options.package_data]
dotiptables = templates/*

[options.entry_points]
console_scripts =
    dotiptables = dotiptables.__main__:main
